duniverse/menhirLib.20200211/test/static/bad/commabar.mly
%token A B

%%

let main :=
  A({}

%token FOO
